[package]
name = "yatp"
version = "0.0.1"
authors = ["The TiKV Authors"]
edition = "2018"
description = ""
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tikv/yatp/"

[dependencies]
num_cpus = "1.0"
parking_lot_core = "0.7"
crossbeam-deque = "0.7"
dashmap = "1.2.0"
rand = "0.7"

[dev-dependencies]
tokio-threadpool = "0.1"
futures-cpupool = "0.1"
threadpool = "1.0"
criterion = "0.3"
futures = "0.1"

[[bench]]
name = "basic"
harness = false

[profile.bench]
debug = true
codegen-units = 1